Fix swagger schemas & delete useless routes
