# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "prototype for API documentation for image processing and marketing suggestions",
+        "description": "Prototype for API documentation for image processing and marketing suggestions",
         "title": "ADVision API Documentation",
         "contact": {},
         "version": "1.0"
@@ -10,46 +10,14 @@
     "paths": {
         "/": {
             "get": {
-                "description": "Returns a simple Hello World message",
-                "produces": [
-                    "application/json"
-                ],
+                "description": "Root endpoint that redirects to the Swagger documentation",
                 "tags": [
-                    "example"
+                    "root"
                 ],
-                "summary": "Hello World endpoint",
+                "summary": "Root endpoint",
                 "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/health": {
-            "get": {
-                "description": "Check the health status of the system",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "system"
-                ],
-                "summary": "Check Health endpoint",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
+                    "301": {
+                        "description": "Moved Permanently"
                     }
                 }
             }
@@ -85,7 +53,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handlers.MarketingSuggestions"
+                            "$ref": "#/definitions/aipi_internal_models.MarketingSuggestions"
                         }
                     },
                     "400": {
@@ -105,11 +73,78 @@
         }
     },
     "definitions": {
-        "handlers.ErrorResponse": {
-            "type": "object"
+        "aipi_internal_models.MarketingSuggestions": {
+            "type": "object",
+            "properties": {
+                "advertisement": {
+                    "type": "string"
+                },
+                "alt_text": {
+                    "type": "string"
+                },
+                "call_to_action": {
+                    "type": "string"
+                },
+                "content_ideas": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "cultural_adaptations": {
+                    "type": "string"
+                },
+                "emojis": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "emotional_tone_analysis": {
+                    "type": "string"
+                },
+                "hashtags": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "image_enhancement_suggestions": {
+                    "type": "string"
+                },
+                "legal_ethical_considerations": {
+                    "type": "string"
+                },
+                "marketing_strategy_tips": {
+                    "type": "string"
+                },
+                "product_suggestions": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "seo_keywords": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "social_media_caption": {
+                    "type": "string"
+                },
+                "target_audience_insights": {
+                    "type": "string"
+                }
+            }
         },
-        "handlers.MarketingSuggestions": {
-            "type": "object"
+        "handlers.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
         }
     }
 }
